--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,6 +3,7 @@
     --default-title-font: RDRLino;
     --content-font: var(--default-content-font), serif;
     --title-font: var(--default-title-font), serif;
+    --ctrl-meta-key: 'Ctrl';
 }
 
 @font-face {
@@ -352,8 +353,7 @@ select {
     margin-bottom: 2px;
 }
 
-.marker-popup-pin-input-icon,
-.marker-popup-pin-input-color {
+.marker-popup-pin-input-icon {
     color: inherit;
     background: #eee;
     border: none;
@@ -361,102 +361,6 @@ select {
     font-size: 14px;
     height: 100%;
     border-radius: 3px;
-}
-
-.pin-color.aquagreen {
-    color: #00ffa2;
-}
-
-.pin-color.beige {
-    color: #ffce70;
-}
-
-.pin-color.black {
-    color: #292929;
-}
-
-.pin-color.blue {
-    color: #31a6c7;
-}
-
-.pin-color.brown {
-    color: #7c411f;
-}
-
-.pin-color.cadetblue {
-    color: #416776;
-}
-
-.pin-color.darkblue {
-    color: #0066a2;
-}
-
-.pin-color.darkgreen {
-    color: #627134;
-}
-
-.pin-color.darkorange {
-    color: #e27839;
-}
-
-.pin-color.darkpurple {
-    color: #593769;
-}
-
-.pin-color.darkred {
-    color: #a13235;
-}
-
-.pin-color.gray {
-    color: #444444;
-}
-
-.pin-color.green {
-    color: #70ae25;
-}
-
-.pin-color.lightblue {
-    color: #88dbff;
-}
-
-.pin-color.lightgray {
-    color: #5e5e5e;
-}
-
-.pin-color.lightgreen {
-    color: #a3c62c;
-}
-
-.pin-color.lightorange {
-    color: #ff8c7d;
-}
-
-.pin-color.lightred {
-    color: #da4d6d;
-}
-
-.pin-color.orange {
-    color: #ee9232;
-}
-
-.pin-color.pink {
-    color: #c05b9f;
-}
-
-.pin-color.purple {
-    color: #6b65a4;
-}
-
-.pin-color.red {
-    color: #d43d29;
-}
-
-.pin-color.white {
-    color: #ffffff;
-}
-
-.pin-color.yellow {
-    color: #ffcc5c;
 }
 
 .links-container {
@@ -484,6 +388,119 @@ select {
     border-radius: 3px;
 }
 
+.input-search-hotkeys {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    display: flex;
+    align-items: center;
+    pointer-events: none;
+    transition: opacity .3s;
+}
+
+.hotkey {
+    display: inline-block;
+    color: rgba(123, 102, 175, .8);
+    font-family: var(--title-font);
+    font-size: 12px;
+    font-weight: 700;
+    margin-right: 2px;
+    padding: 2px 4px;
+    background-color: rgba(123, 102, 175, .2);
+    border: 2px solid rgba(123, 102, 175, .8);
+    border-radius: 3px;
+}
+
+.query-suggestions-hotkeys {
+    display: none;
+    position: absolute;
+    top: calc(100% + 5px);
+    left: 0;
+    width: 100%;
+    padding: 8px;
+    background-color: rgba(56, 56, 56, .8);
+    border: 1px solid rgba(56, 56, 56, .8);
+    border-radius: 3px;
+    color: #eee;
+    font-size: 13px;
+    text-align: left;
+    z-index: 1000;
+    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
+    -moz-backdrop-filter: blur(2px);
+    transition: opacity 0.3s ease;
+}
+
+.query-suggestions-hotkeys .hotkey {
+    font-size: 10px;
+}
+
+.query-suggestions-hotkeys.focused {
+    display: inline-block;
+    opacity: 1;
+}
+
+.input-search-hotkeys .hotkey:first-child:after {
+    content: var(--ctrl-meta-key);
+    letter-spacing: normal;
+}
+
+.input-with-suggestions {
+    position: relative;
+    width: 100%;
+}
+
+.query-suggestions {
+    position: absolute;
+    color: #eee;
+    width: 100%;
+    max-height: calc(10em + 20px);
+    border: 1px solid rgba(56, 56, 56, .8);
+    border-radius: 3px;
+    background-color: rgba(56, 56, 56, .8);
+    box-shadow: 0 2px 5px rgba(0,0,0, .4);
+    overflow-y: auto;
+    overflow: hidden;
+    z-index: 1000;
+    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
+    -moz-backdrop-filter: blur(2px);
+}
+
+.query-suggestions:hover,
+.query-suggestions.scroll-visible {
+    overflow: auto;
+}
+
+.query-suggestions::-webkit-scrollbar {
+    width: 5px;
+  }
+  
+.query-suggestions::-webkit-scrollbar-track {
+    background: rgba(56, 56, 56, .6); 
+    border-radius: 3px;
+}
+
+.query-suggestions::-webkit-scrollbar-thumb {
+    background: rgb(172, 169, 169, .4);
+}
+
+.query-suggestions::-webkit-scrollbar-thumb:hover {
+    background: rgba(200, 199, 199, .4);
+}
+
+.query-suggestion {
+    font-size: 14px;
+    padding: 8px;
+    cursor: pointer;
+}
+
+.query-suggestion:hover, .query-suggestion.active {
+    color: #fff;
+    background-color: rgba(138, 136, 136, .8);
+}
+
 .input-file {
     background-image: url(../images/menu_highlight.png);
     background-size: 100% 100%;
@@ -502,6 +519,29 @@ select {
     display: flex;
     justify-content: space-between;
     margin: 5px 0;
+}
+
+#custom-markers-colors .clr-field input {
+    width: 5vw;
+    border-radius: 3px;
+}
+
+.leaflet-popup-content .clr-field input {
+    width: 100%;
+    border-radius: 3px;
+}
+
+#custom-markers-colors .clr-field button,
+.leaflet-popup-content .clr-field button {
+    width: 100%;
+    height: 100%;
+    border-radius: 3px;
+}
+
+#clr-picker #clr-swatches button,
+#custom-markers-colors #clr-picker #clr-swatches button {
+    width: 30px;
+    height: 30px;
 }
 
 .input-container-noflex {
@@ -1146,6 +1186,14 @@ a.no-style:visited {
     user-select: none;
 }
 
+#weekly-container .blurred {
+    filter: blur(2px);
+}
+
+#weekly-container .header, #weekly-container p {
+    transition: filter 0.3s ease;
+}
+
 .weekly-item-listings p {
     text-align: center;
     font-size: 14px;
@@ -1283,6 +1331,14 @@ a.no-style:visited {
     overflow-y: scroll;
 }
 
+.modal-body iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 .modal-body .settings-container {
     margin-top: 15px;
 }
@@ -1324,6 +1380,14 @@ a.no-style:visited {
     .modal-sm {
         --bs-modal-width: 450px;
     }
+}
+
+#video-modal .modal-xl {
+    width: 66.667%;
+}
+
+#video-modal .modal-body {
+    padding: 20px 5px 10px 5px;
 }
 
 /* Fix buttons showing on top of sidebar on mobile menu */
@@ -1376,6 +1440,24 @@ a.no-style:visited {
         left: 2px;
         right: 2px;
         bottom: 2px;
+    }
+
+    .input-search-hotkeys {
+        display: none;
+    }
+
+    #video-modal .modal-xl {
+        width: calc(100vw - 15px);
+    }
+
+    #custom-markers-colors .clr-field input {
+        width: 10vw;
+    }
+
+    #clr-picker #clr-swatches button,
+    #custom-markers-colors #clr-picker #clr-swatches button {
+        width: 42px;
+        height: 42px;
     }
 }
 
@@ -1478,6 +1560,54 @@ a.no-style:visited {
     background-repeat: no-repeat;
     background-size: 100% 100%;
     padding: 15px 25px;
+}
+
+#back-to-top {
+    position: fixed;
+    display: none;
+    z-index: 1000;
+    left: 18em;
+    bottom: 7em;
+    width: 46px;
+    height: 46px;
+    border: none;
+    border-radius: 50%;
+    background-color: #eee;
+    box-shadow: rgba(14, 15, 15, .3) 0px 2px 10px 0px;
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transform: translateY(15px);
+    transform: translateY(15px);
+    -webkit-transition: 0.2s all;
+    transition: 0.2s all;
+    cursor: pointer;
+}
+
+#back-to-top:hover {
+    background-color: #ded2fc;
+}
+
+.side-menu.menu-opened #back-to-top {
+    display: block;
+}
+
+#back-to-top img {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    height: 50%;
+    width: 50%;
+    filter: invert(100%) sepia(100%) saturate(10000%) hue-rotate(10deg);
+    pointer-events: none;
+}
+
+#back-to-top.is-visible {
+    opacity: 1;
+    visibility: visible;
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
 }
 
 /* Pathfinder styling */
@@ -1651,15 +1781,6 @@ a.no-style:visited {
 .leaflet-control-layers-expanded {
     color: #d4d4d4;
     background: #333;
-}
-
-.leaflet-control-zoom {
-    background-color: #333;
-    color: #d4d4d4;
-}
-
-.leaflet-control-zoom a {
-    background-color: #333;
 }
 
 .leaflet-popup-tip {
@@ -2025,4 +2146,147 @@ button.reload-nazar {
     justify-content: center;
     display: flex;
     padding: 12px 0 0 0;
+}
+
+/* Leaflet.ZoomEx */
+@-moz-document url-prefix() {
+    .leaflet-zoomex-out .fa,
+    .leaflet-zoomex-out .fab,
+    .leaflet-zoomex-out .far,
+    .leaflet-zoomex-out .fas,
+    .leaflet-zoomex-in .fa,
+    .leaflet-zoomex-in .fab,
+    .leaflet-zoomex-in .far,
+    .leaflet-zoomex-in .fas {
+        margin-top: .05rem;
+        margin-bottom: -.05rem;
+    }
+}
+
+.leaflet-zoomex {
+    display: flex;
+    align-items: center;
+    /* to simplify the rules for adjusting positions with translate */
+    box-sizing: border-box;
+    padding: .375rem .375rem;
+    background-color: rgba(255, 255, 255, .67);
+    border: .125rem solid rgba(255, 255, 255, 1);
+    border-radius: .25rem;
+    box-shadow: rgba(0, 0, 0, .33) 0 .125rem .375rem;
+    opacity: .5;
+    transition: opacity .2s;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -khtml-user-select: none;
+    text-size-adjust: none;
+    -webkit-text-size-adjust: none;
+    -moz-text-size-adjust: none;
+    -ms-text-size-adjust: none;
+    -khtml-text-size-adjust: none;
+}
+
+.leaflet-zoomex:hover {
+    opacity: 1;
+}
+
+.leaflet-zoomex-slider-container {
+    display: flex;
+    align-items: center;
+    flex: 1;
+    padding: 0 .125rem;
+}
+
+.leaflet-zoomex-slider {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 100%;
+    height: .75rem;
+    padding: 0;
+    margin: 0;
+    border-radius: .75rem;
+    background: rgba(var(--primary-rgb), .5) !important;
+    outline: none;
+    cursor: pointer;
+}
+
+.leaflet-zoomex-slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    /* to make webkit and moz consistent */
+    box-sizing: content-box;
+    width: 1.125rem;
+    height: 1.125rem;
+    border: .1875rem solid rgba(255, 255, 255, 1);
+    border-radius: .25rem;
+    background: rgba(var(--primary-rgb), 1) !important;
+    cursor: grab;
+}
+
+.leaflet-zoomex-slider:focus::-webkit-slider-thumb {
+    box-shadow: 0 0 0 .375rem rgba(var(--primary-rgb), .25);
+}
+
+.leaflet-zoomex-slider:focus-visible::-webkit-slider-thumb {
+    border: .1875rem solid rgba(0, 0, 0, 1);
+}
+
+.leaflet-zoomex-slider::-moz-range-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    /* to make webkit and moz consistent */
+    box-sizing: content-box;
+    width: 1.125rem;
+    height: 1.125rem;
+    border: .1875rem solid rgba(255, 255, 255, 1);
+    border-radius: .25rem;
+    background: rgba(var(--primary-rgb), 1) !important;
+    cursor: grab;
+}
+
+.leaflet-zoomex-slider:focus::-moz-range-thumb {
+    box-shadow: 0 0 0 .375rem rgba(var(--primary-rgb), .25);
+}
+
+.leaflet-zoomex-slider:focus-visible::-moz-range-thumb {
+    border: .1875rem solid rgba(0, 0, 0, 1);
+}
+
+.leaflet-zoomex-out,
+.leaflet-zoomex-in {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem;
+    width: 1.5rem;
+    padding: 0;
+    margin: 0;
+    border: none;
+    color: rgba(var(--primary-rgb), 1);
+    background-color: transparent;
+    cursor: pointer;
+}
+
+.leaflet-zoomex-out svg,
+.leaflet-zoomex-in svg {
+    fill: rgba(var(--primary-rgb), 1);
+    width: 1.5rem;
+    height: 1.5rem;
+}
+
+.leaflet-zoomex-rightbottom {
+    position: absolute;
+    margin: 0 !important;
+    right: .5rem;
+    bottom: 2.5rem;
+    width: calc(var(--vh, 1vh) * 25);
+    /* elem size: 25vh x 2.5rem  */
+    transform: translateX(calc(50% - 2.5rem / 2)) translateY(calc(50% - var(--vh, 1vh) * 25 / 2)) rotate(-90deg);
+    box-shadow: rgba(0, 0, 0, .33) -.125rem 0 .375rem;
+}
+
+.leaflet-zoomex-rightbottom .leaflet-zoomex-out,
+.leaflet-zoomex-rightbottom .leaflet-zoomex-in {
+    transform: rotate(90deg);
 }
