--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3200,7 +3200,7 @@ button.reload-nazar {
 .leaflet-zoomex-rightbottom .leaflet-zoomex-in {
     transform: rotate(90deg);
 }
-
+/*
 .menu-ad {
     display: none;
 }
@@ -3248,3 +3248,4 @@ button.reload-nazar {
     display: block;
   }
 }
+*/
