--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -61,6 +61,7 @@ body {
     font-family: var(--content-font);
     line-height: 1.42857143;
     text-rendering: optimizeLegibility;
+    padding: 0 !important;
 }
 
 .h1,.h2,.h3,.h4,.h5,.h6,h1,h2,h3,h4,h5,h6 {
